--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,8 @@ body {
 .nav {
   display: flex;
   justify-content: space-between;
-  margin: 0 11rem;
+  margin: 0 9%;
+  font-size: small;
 }
 .nav_logo {
   align-self: center;
@@ -39,18 +40,25 @@ body {
   gap: 3rem;
   color: black;
   font-weight: 500;
+  transition: all 300ms ease-in-out;
 }
 .nav_menu a {
   text-decoration: none;
   color: black;
   display: inline-block;
+  transition: all 300ms ease-in-out;
 }
 .nav_menu li a {
   padding: 1rem;
+  box-sizing: border-box;
+}
+.nav_menu li a:hover {
+  color: #ff5353;
+  transition: all 300ms ease-in-out;
 }
 .nav_menu ul {
   display: inline;
-  margin: 0;
+  margin: 0%;
   padding: 0;
 }
 .nav_menu ul li {
@@ -63,6 +71,7 @@ body {
   position: absolute;
   width: 200px;
   display: none;
+  padding: 1% 0;
 }
 .nav_menu ul li ul li {
   display: block;
@@ -70,12 +79,16 @@ body {
 .nav_menu ul li ul li a {
   display: block;
   background-color: white;
+  transition: background-color 300ms;
+}
+.nav_menu ul li ul li a:hover {
+  background-color: #f5f5f5;
 }
 .nav_icons {
   display: flex;
   gap: 1em;
   padding: 2rem 2rem;
-  display: relative;
+  font-size: 1.2rem;
 }
 .nav_icons a {
   position: relative;
@@ -85,28 +98,46 @@ body {
 .nav_icons .ti-shopping-cart {
   position: relative;
 }
+.nav_icons .ti-shopping-cart::after {
+  content: "0";
+  width: 10px;
+  height: 10px;
+  color: white;
+  background-color: #ff5353;
+  border-radius: 50%;
+  position: absolute;
+  bottom: 15px;
+  left: 14px;
+  text-align: center;
+  font-size: xx-small;
+  padding: 0.2rem;
+}
+.nav_icons .ti-heart {
+  position: relative;
+}
+.nav_icons .ti-heart .counter {
+  width: 10px;
+  height: 10px;
+  color: white;
+  background-color: #ff5353;
+  border-radius: 50%;
+  position: absolute;
+  bottom: 15px;
+  left: 14px;
+  text-align: center;
+  font-size: xx-small;
+  padding: 0.2rem;
+}
 .nav_icons .ti-shopping-cart:hover,
 .nav_icons .ti-heart:hover {
   background-color: transparent;
   color: #ff5353;
 }
-.nav_icons .counter {
-  position: absolute;
-  color: white;
-  background-color: #ff5353;
-  border-radius: 50%;
-  padding: 1% 1%;
-  text-align: center;
-  box-sizing: border-box;
-  padding: 0.1em 0.2em;
-  font-size: small;
-  top: -10px;
-}
 
 .banner {
   background-image: url(https://demo.themeies.com/silon/images/bg-1.jpg);
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   height: 60vh;
 }
 .banner_left {
@@ -160,28 +191,42 @@ h1 {
 }
 
 .container_photos {
+  border: 3px solid red;
   display: flex;
   justify-content: center;
   gap: 3rem;
-  margin-bottom: 3.5rem;
+  margin-bottom: 2rem;
 }
 .container_photos_card {
+  border: 3px solid blue;
   gap: 1;
   display: block;
+  bottom: 0;
+  position: relative;
+  visibility: visible;
+}
+.container_photos_card:hover .container_photos_card_top_hoverLinks {
+  visibility: visible;
+  bottom: 100px;
 }
 .container_photos_card_top {
+  border: 3px solid green;
   position: relative;
+  margin-bottom: 1rem;
+  bottom: 0;
 }
 .container_photos_card_top_hoverLinks {
+  border: 3px solid magenta;
   position: absolute;
   width: 100%;
   text-align: center;
-  bottom: 20%;
-  opacity: 1;
   visibility: hidden;
+  bottom: 0;
+  transition: bottom 400ms ease;
 }
 .container_photos_card_top_hoverLinks a {
   text-decoration: none;
+  color: black;
   border-radius: 50%;
   background-color: white;
   padding: 1rem;
@@ -194,21 +239,28 @@ h1 {
   display: flex;
   flex-direction: column;
   align-items: center;
+  line-height: 1.5rem;
+  font-size: 1rem;
 }
-.container_photos_card_bottom h4 {
+.container_photos_card_bottom a {
   font-weight: 100;
+  line-height: 2rem;
+  transition: all 300ms ease-in-out;
+  text-decoration: none;
+  color: black;
+}
+.container_photos_card_bottom a:hover {
+  color: #ff5353;
 }
 .container_photos_card_bottom p {
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   font-weight: 500;
+  margin-top: 0.5rem;
 }
 .container_photos_card_bottom_rating {
   box-sizing: border-box;
   color: red;
   text-align: center;
-}
-.container_photos_card:hover .container_photos_card_top_hoverLinks {
-  visibility: visible;
 }
 
 .banner2 {
@@ -266,94 +318,114 @@ h1 {
 .footer_top_links h5 {
   font-size: 1rem;
   font-weight: 500;
-  padding: 1rem 0;
+  padding: 2rem 0;
+}
+.footer_top_links a {
+  text-decoration: none;
+  color: #888;
+  font-size: 0.9rem;
+}
+.footer_top_links a:hover {
+  color: #ff5353;
 }
 .footer_top_links ul {
   color: #888;
   list-style: none;
   margin: 0;
   padding: 0;
-  line-height: 2rem;
+  line-height: 2em;
   font-weight: 300;
-  margin-top: 3rem;
 }
 .footer_top_links li {
   text-align: left;
 }
+.footer_top_links li:first-of-type {
+  margin-top: 1rem;
+}
 .footer_top_widget {
   display: flex;
   flex-direction: column;
+  margin-bottom: 3rem;
 }
 .footer_top_widget h6 {
   font-size: 1em;
   font-weight: 500;
 }
+.footer_top_widget hr:only-of-type {
+  margin-top: 2rem;
+}
 .footer_top_widget_appBtn {
   display: flex;
   justify-content: center;
-  gap: 1rem;
+  gap: 0.4rem;
 }
 .footer_top_widget_appBtn_android {
   display: flex;
   align-items: center;
-  gap: 1rem;
-  padding: 0 1rem;
+  gap: 0.5rem;
+  padding: 0 0.8rem;
+  margin: 0 0.1rem;
   border-radius: 5px;
   background-color: white;
   transition: background-color 300ms;
+  text-align: left;
 }
 .footer_top_widget_appBtn_android .ti-android {
   color: #ff5353;
-}
-.footer_top_widget_appBtn_android .footer_top_widget_appBtn:hover {
-  background-color: #ff5353;
+  font-size: 1.5rem;
 }
 .footer_top_widget_appBtn_android p {
   font-size: x-small;
 }
 .footer_top_widget_appBtn_android p:first-of-type {
-  letter-spacing: 0.1rem;
-  margin: 0;
-  padding: 0;
+  margin-bottom: 0;
+  font-size: 0.6rem;
 }
 .footer_top_widget_appBtn_android p:nth-of-type(2) {
-  font-weight: 700;
+  font-weight: 500;
   font-size: 0.8rem;
-  margin-bottom: 0;
+  margin-top: 0;
+}
+.footer_top_widget_appBtn_android:hover {
+  background-color: #ff5353;
+  color: white;
+}
+.footer_top_widget_appBtn_android:hover .ti-android {
+  color: white;
 }
 .footer_top_widget_appBtn_apple {
   display: flex;
   align-items: center;
-  gap: 1rem;
-  padding: 0.5rem 1rem;
+  gap: 0.5rem;
+  padding: 0rem 0.8rem;
   border-radius: 5px;
   background-color: #ff5353;
   color: white;
+}
+.footer_top_widget_appBtn_apple .ti-apple {
+  font-size: 1.5rem;
 }
 .footer_top_widget_appBtn_apple p {
   font-size: x-small;
 }
 .footer_top_widget_appBtn_apple p:first-of-type {
-  letter-spacing: 0.1rem;
-  margin-top: 0;
+  margin-bottom: 0;
+  font-size: 0.6rem;
 }
 .footer_top_widget_appBtn_apple p:nth-of-type(2) {
   font-weight: 700;
   font-size: 0.8rem;
-  margin-bottom: 0;
+  margin-top: 0;
 }
 .footer_top_widget_appIcons {
   margin: 0;
-}
-.footer_top_widget_appIcons h6 {
-  font-size: 1em;
-  font-weight: 500;
 }
 .footer_top_widget_appIcons a {
   text-decoration: none;
   color: black;
   background-color: white;
   padding: 0.5rem;
+  margin: 0 0.25rem;
   transition: background-color 300ms;
 }
 .footer_top_widget_appIcons a:hover {
@@ -363,6 +435,10 @@ h1 {
   text-align: center;
   color: #888;
   font-weight: 300;
+}
+.footer_bottom hr {
+  width: 78vw;
+  text-align: center;
 }
 .footer_bottom span {
   color: red;
