--- a/scss/main.scss
+++ b/scss/main.scss
@@ -31,7 +31,8 @@ body {
 .nav {
   display: flex;
   justify-content: space-between;
-  margin: 0 11rem;
+  margin: 0 9%;
+  font-size: small;
 
   &_logo {
     align-self: center;
@@ -44,30 +45,38 @@ body {
     gap: 3rem;
     color: black;
     font-weight: 500;
+    transition: all 300ms ease-in-out;
 
     a {
       text-decoration: none;
       color: black;
       display: inline-block;
+      transition: all 300ms ease-in-out;
     }
     li a {
       padding: 1rem;
+      box-sizing: border-box;
+      &:hover {
+        color: #ff5353;
+        transition: all 300ms ease-in-out;
+      }
     }
     ul {
       display: inline;
-      margin: 0;
+      margin: 0%;
       padding: 0;
     }
     ul li {
       display: inline-block;
-    }
-    ul li:hover ul {
-      display: block;
+      &:hover ul {
+        display: block;
+      }
     }
     ul li ul {
       position: absolute;
       width: 200px;
       display: none;
+      padding: 1% 0;
     }
     ul li ul li {
       display: block;
@@ -75,6 +84,10 @@ body {
     ul li ul li a {
       display: block;
       background-color: white;
+      transition: background-color 300ms;
+      &:hover {
+        background-color: #f5f5f5;
+      }
     }
   }
 
@@ -82,8 +95,8 @@ body {
     display: flex;
     gap: 1em;
     padding: 2rem 2rem;
-    display: relative;
-
+    font-size: 1.2rem;
+    // position: relative;
     a {
       position: relative;
       text-decoration: none;
@@ -92,24 +105,56 @@ body {
 
     .ti-shopping-cart {
       position: relative;
+      // .counter {
+      //   width: 10px;
+      //   height: 10px;
+      //   color: white;
+      //   background-color: #ff5353;
+      //   border-radius: 50%;
+      //   position: absolute;
+      //   bottom: 15px;
+      //   left: 14px;
+      //   text-align: center;
+      //   font-size: xx-small;
+      //   padding: 0.2rem;
+      // }
+      &::after {
+        content: "0";
+        width: 10px;
+        height: 10px;
+        color: white;
+        background-color: #ff5353;
+        border-radius: 50%;
+        position: absolute;
+        bottom: 15px;
+        left: 14px;
+        text-align: center;
+        font-size: xx-small;
+        padding: 0.2rem;
+      }
     }
+
+    .ti-heart {
+      position: relative;
+      .counter {
+        width: 10px;
+        height: 10px;
+        color: white;
+        background-color: #ff5353;
+        border-radius: 50%;
+        position: absolute;
+        bottom: 15px;
+        left: 14px;
+        text-align: center;
+        font-size: xx-small;
+        padding: 0.2rem;
+      }
+    }
+
     .ti-shopping-cart:hover,
     .ti-heart:hover {
       background-color: transparent;
       color: #ff5353;
-    }
-
-    .counter {
-      position: absolute;
-      color: white;
-      background-color: #ff5353;
-      border-radius: 50%;
-      padding: 1% 1%;
-      text-align: center;
-      box-sizing: border-box;
-      padding: 0.1em 0.2em;
-      font-size: small;
-      top: -10px;
     }
   }
 }
@@ -117,7 +162,7 @@ body {
 .banner {
   background-image: url(https://demo.themeies.com/silon/images/bg-1.jpg);
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   height: 60vh;
 
   &_left {
@@ -173,35 +218,52 @@ h1 {
 }
 
 .container_photos {
-  // border: 3px solid red;
+  border: 3px solid red;
   display: flex;
   justify-content: center;
   gap: 3rem;
-  margin-bottom: 3.5rem;
+  margin-bottom: 2rem;
 
   &_card {
-    // border: 3px solid blue;
+    border: 3px solid blue;
     gap: 1;
     display: block;
+    bottom: 0;
+    position: relative;
+    visibility: visible;
+
+    &:hover &_top_hoverLinks {
+      visibility: visible;
+      // opacity: 1;
+      bottom: 100px;
+    }
 
     &_top {
-      // border: 3px solid green;
+      border: 3px solid green;
       position: relative;
+      margin-bottom: 1rem;
+      bottom: 0;
 
       &_hoverLinks {
-        // border: 3px solid magenta;
+        border: 3px solid magenta;
         position: absolute;
         width: 100%;
         text-align: center;
-        bottom: 20%;
-        opacity: 1;
         visibility: hidden;
+        bottom: 0;
+
+        transition: bottom 400ms ease;
+
+        // bottom: 100px;
 
         a {
           text-decoration: none;
+          color: black;
           border-radius: 50%;
           background-color: white;
           padding: 1rem;
+          // visibility: visible;
+
           &:hover {
             background-color: #ff5353;
             color: white;
@@ -211,17 +273,28 @@ h1 {
     }
 
     &_bottom {
+      // border: 3px solid red;
       display: flex;
       flex-direction: column;
       align-items: center;
+      line-height: 1.5rem;
+      font-size: 1rem;
 
-      h4 {
+      a {
         font-weight: 100;
+        line-height: 2rem;
+        transition: all 300ms ease-in-out;
+        text-decoration: none;
+        color: black;
+        &:hover {
+          color: #ff5353;
+        }
       }
 
       p {
-        font-size: 1.5rem;
+        font-size: 1.2rem;
         font-weight: 500;
+        margin-top: 0.5rem;
       }
 
       &_rating {
@@ -231,12 +304,11 @@ h1 {
         text-align: center;
       }
     }
-
-    &:hover {
-      .container_photos_card_top_hoverLinks {
-        visibility: visible;
-      }
-    }
+    // &:hover {
+    //   .container_photos_card_top_hoverLinks {
+    //     visibility: visible;
+    //   }
+    // }
   }
 }
 
@@ -260,7 +332,6 @@ h1 {
       font-size: 2rem;
       font-weight: 100;
     }
-
     a {
       box-sizing: border-box;
       background-color: #ff5353;
@@ -271,7 +342,6 @@ h1 {
       align-self: center;
       transition: all 300ms ease-in-out;
     }
-
     a:hover {
       background-color: white;
       color: #007bff;
@@ -284,119 +354,152 @@ h1 {
 }
 
 .footer {
+  // border: 3px solid red;
   background-color: #e9e2d8;
   display: grid;
   grid-template-rows: 5fr 1fr;
 
   &_top {
+    // border-bottom: 1px solid #888;
     display: flex;
     justify-content: space-evenly;
 
     &_links {
+      // border-bottom: 2px solid green;
       display: flex;
       justify-content: center;
       h5 {
+        // border: 3px solid red;
         font-size: 1rem;
         font-weight: 500;
-        padding: 1rem 0;
+        padding: 2rem 0;
+      }
+      a {
+        text-decoration: none;
+        color: #888;
+        font-size: 0.9rem;
+        &:hover {
+          color: #ff5353;
+        }
       }
       ul {
         color: #888;
         list-style: none;
         margin: 0;
         padding: 0;
-        line-height: 2rem;
+        line-height: 2em;
         font-weight: 300;
-        margin-top: 3rem;
+        // margin-top: 3rem;
       }
       li {
         text-align: left;
+      }
+      li:first-of-type {
+        margin-top: 1rem;
       }
     }
     &_widget {
       display: flex;
       flex-direction: column;
+      margin-bottom: 3rem;
 
       h6 {
         font-size: 1em;
         font-weight: 500;
       }
+
+      hr:only-of-type {
+        margin-top: 2rem;
+      }
       &_appBtn {
+        // border: 3px solid red;
         display: flex;
         justify-content: center;
-        gap: 1rem;
+        gap: 0.4rem;
 
         &_android {
+          // border: 3px solid green;
           display: flex;
           align-items: center;
-          gap: 1rem;
-          padding: 0 1rem;
+          gap: 0.5rem;
+          padding: 0 0.8rem;
+          margin: 0 0.1rem;
           border-radius: 5px;
           background-color: white;
           transition: background-color 300ms;
-
+          text-align: left;
           .ti-android {
             color: #ff5353;
-          }
-          .footer_top_widget_appBtn:hover {
-            background-color: #ff5353;
+            font-size: 1.5rem;
           }
           p {
             font-size: x-small;
           }
           p:first-of-type {
-            letter-spacing: 0.1rem;
-            margin: 0;
-            padding: 0;
+            // letter-spacing: 0.1rem;
+            margin-bottom: 0;
+            font-size: 0.6rem;
           }
           p:nth-of-type(2) {
-            font-weight: 700;
+            font-weight: 500;
             font-size: 0.8rem;
-            margin-bottom: 0;
+            margin-top: 0;
+          }
+          &:hover {
+            background-color: #ff5353;
+            color: white;
+            .ti-android {
+              color: white;
+            }
           }
         }
         &_apple {
+          // border: 3px solid blue;
           display: flex;
           align-items: center;
-          gap: 1rem;
-          padding: 0.5rem 1rem;
+          gap: 0.5rem;
+          padding: 0rem 0.8rem;
           border-radius: 5px;
           background-color: #ff5353;
           color: white;
-
+          .ti-apple {
+            font-size: 1.5rem;
+          }
           p {
             font-size: x-small;
           }
           p:first-of-type {
-            letter-spacing: 0.1rem;
-            margin-top: 0;
+            // letter-spacing: 0.1rem;
+            margin-bottom: 0;
+            font-size: 0.6rem;
           }
           p:nth-of-type(2) {
             font-weight: 700;
             font-size: 0.8rem;
-            margin-bottom: 0;
+            margin-top: 0;
           }
         }
       }
 
       &_appIcons {
+        // border: 3px solid #888;
         margin: 0;
-
-        h6 {
-          font-size: 1em;
-          font-weight: 500;
-        }
 
         a {
           text-decoration: none;
           color: black;
           background-color: white;
           padding: 0.5rem;
+          margin: 0 0.25rem;
           transition: background-color 300ms;
         }
         a:hover {
           background-color: #ff5353;
         }
+        // hr{
+        //   margin-top: 15%;
+        //   color: #d6d8d9;
+        // }
       }
     }
   }
@@ -405,6 +508,12 @@ h1 {
     text-align: center;
     color: #888;
     font-weight: 300;
+
+    hr {
+      width: 78vw;
+      text-align: center;
+      // box-sizing: border-box;
+    }
 
     span {
       color: red;
