--- a/css/main.css
+++ b/css/main.css
@@ -5,11 +5,11 @@ body {
 
 .header {
   background-color: #fef7f6;
+  display: flex;
+  justify-content: space-between;
   font-size: small;
   font-weight: 300;
   padding: 0.15rem 5%;
-  display: flex;
-  justify-content: space-between;
 }
 .header-top-left {
   display: flex;
@@ -58,7 +58,7 @@ body {
 }
 .nav_menu ul {
   display: inline;
-  margin: 0%;
+  margin: 0;
   padding: 0;
 }
 .nav_menu ul li {
@@ -71,7 +71,7 @@ body {
   position: absolute;
   width: 200px;
   display: none;
-  padding: 1% 0;
+  padding: 1.3% 0;
 }
 .nav_menu ul li ul li {
   display: block;
@@ -90,31 +90,19 @@ body {
   padding: 2rem 2rem;
   font-size: 1.2rem;
 }
+.nav_icons a:first-of-type {
+  display: none;
+}
 .nav_icons a {
   position: relative;
   text-decoration: none;
   color: black;
 }
-.nav_icons .ti-shopping-cart {
-  position: relative;
-}
-.nav_icons .ti-shopping-cart::after {
-  content: "0";
-  width: 10px;
-  height: 10px;
-  color: white;
-  background-color: #ff5353;
-  border-radius: 50%;
-  position: absolute;
-  bottom: 15px;
-  left: 14px;
-  text-align: center;
-  font-size: xx-small;
-  padding: 0.2rem;
-}
+.nav_icons .ti-shopping-cart,
 .nav_icons .ti-heart {
   position: relative;
 }
+.nav_icons .ti-shopping-cart .counter,
 .nav_icons .ti-heart .counter {
   width: 10px;
   height: 10px;
@@ -136,25 +124,28 @@ body {
 
 .banner {
   background-image: url(https://demo.themeies.com/silon/images/bg-1.jpg);
+  background-position: center;
+  width: 100%;
+  height: auto;
   display: flex;
   justify-content: center;
-  height: 60vh;
+  align-items: center;
+  margin: 0;
 }
 .banner_left {
+  width: 50%;
+  height: auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
   flex-wrap: wrap;
-  padding: 0 2rem;
-  box-sizing: border-box;
 }
 .banner_left h1 {
   text-align: center;
-  font-size: small;
+  color: #565656;
+  font-size: 1rem;
   letter-spacing: 0.25rem;
-  font-weight: 300;
-  margin: 0;
+  font-weight: 500;
 }
 .banner_left h2 {
   text-align: center;
@@ -164,13 +155,9 @@ body {
   margin-top: 0;
 }
 .banner_left a {
-  box-sizing: border-box;
   background-color: #ff5353;
   text-decoration: none;
   color: white;
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
   padding: 1rem 3rem;
   align-self: center;
   transition: all 300ms ease-in-out;
@@ -179,45 +166,56 @@ body {
   background-color: white;
   color: #007bff;
 }
+.banner_right {
+  width: 50%;
+  height: auto;
+}
 .banner_right img {
-  display: block;
   width: 100%;
   height: auto;
 }
 
-h1 {
+.title {
   text-align: center;
-  line-height: 7rem;
+  font-size: 1.5rem;
+  padding: 3rem 0;
 }
 
 .container_photos {
   display: flex;
   justify-content: center;
   gap: 3rem;
-  margin-bottom: 2rem;
+  margin-bottom: 4rem;
 }
 .container_photos_card {
-  gap: 1;
-  display: block;
-  bottom: 0;
   position: relative;
   visibility: visible;
+}
+.container_photos_card:first-of-type {
+  margin-left: 3rem;
+}
+.container_photos_card:nth-of-type(3) {
+  margin-right: 3rem;
 }
 .container_photos_card:hover .container_photos_card_top_hoverLinks {
   visibility: visible;
-  bottom: 100px;
+  bottom: 40%;
 }
 .container_photos_card_top {
-  position: relative;
-  bottom: 0;
+  width: 100%;
+  height: auto;
+  bottom: 50%;
+}
+.container_photos_card_top img {
+  width: 100%;
 }
 .container_photos_card_top_hoverLinks {
   position: absolute;
   width: 100%;
   text-align: center;
   visibility: hidden;
-  bottom: 0;
-  transition: bottom 400ms ease;
+  bottom: 20%;
+  transition: bottom 300ms ease-in-out;
 }
 .container_photos_card_top_hoverLinks a {
   text-decoration: none;
@@ -262,23 +260,28 @@ h1 {
   display: flex;
   justify-content: center;
   background-color: #e9e2d8;
-  gap: 3;
+  width: 100%;
+  height: auto;
+  align-items: center;
 }
 .banner2_content {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
+  width: 50%;
 }
 .banner2_content h1 {
   font-family: "Dancing Script", cursive;
   font-size: 4rem;
+  margin: 0;
 }
 .banner2_content h2 {
   font-size: 2rem;
   font-weight: 100;
+  text-align: center;
 }
 .banner2_content a {
-  box-sizing: border-box;
   background-color: #ff5353;
   text-decoration: none;
   color: white;
@@ -294,31 +297,43 @@ h1 {
   color: #007bff;
 }
 .banner2_photo {
-  box-sizing: border-box;
+  height: auto;
+  width: 50%;
+}
+.banner2_photo img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: auto;
 }
 
 .footer {
   background-color: #e9e2d8;
-  display: grid;
-  grid-template-rows: 5fr 1fr;
+  display: flex;
+  flex-direction: column;
 }
 .footer_top {
-  display: flex;
-  justify-content: space-evenly;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  align-items: center;
+  margin: 0 1rem;
 }
 .footer_top_links {
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  margin: 3rem 1rem;
 }
 .footer_top_links h5 {
+  color: black;
   font-size: 1rem;
   font-weight: 500;
-  padding: 2rem 0;
 }
 .footer_top_links a {
   text-decoration: none;
   color: #888;
   font-size: 0.9rem;
+  font-weight: 400;
 }
 .footer_top_links a:hover {
   color: #ff5353;
@@ -328,30 +343,32 @@ h1 {
   list-style: none;
   margin: 0;
   padding: 0;
-  line-height: 2em;
+  line-height: 1.5rem;
   font-weight: 300;
 }
 .footer_top_links li {
   text-align: left;
 }
 .footer_top_links li:first-of-type {
-  margin-top: 1rem;
+  margin-top: 0.5rem;
+}
+.footer_top_links ul li {
+  margin: 0.3rem 1rem;
 }
 .footer_top_widget {
   display: flex;
   flex-direction: column;
-  margin-bottom: 3rem;
+  align-content: center;
 }
 .footer_top_widget h6 {
   font-size: 1em;
   font-weight: 500;
 }
 .footer_top_widget hr:only-of-type {
-  margin-top: 2rem;
+  margin-top: 1rem;
 }
 .footer_top_widget_appBtn {
   display: flex;
-  justify-content: center;
   gap: 0.4rem;
 }
 .footer_top_widget_appBtn_android {
@@ -412,9 +429,6 @@ h1 {
   font-size: 0.8rem;
   margin-top: 0;
 }
-.footer_top_widget_appIcons {
-  margin: 0;
-}
 .footer_top_widget_appIcons a {
   text-decoration: none;
   color: black;
@@ -429,13 +443,156 @@ h1 {
 .footer_bottom {
   text-align: center;
   color: #888;
-  font-weight: 300;
+  font-weight: 400;
+  font-size: 0.9rem;
 }
 .footer_bottom hr {
-  width: 78vw;
+  width: 94%;
   text-align: center;
 }
 .footer_bottom span {
   color: red;
+}
+
+@media (max-width: 991px) {
+  .header {
+    font-size: 60%;
+    gap: 0.5rem;
+  }
+  .nav_logo {
+    font-size: xx-small;
+  }
+  .nav_menu {
+    display: none;
+  }
+  .nav_icons {
+    padding: 1.5rem 1rem;
+  }
+  .nav_icons a:first-child {
+    display: flex;
+  }
+  .banner_left h1 {
+    font-size: 0.8rem;
+  }
+  .banner_left h2 {
+    font-size: 2.5rem;
+  }
+  .container_photos {
+    gap: 1rem;
+  }
+  .container_photos_card:first-child {
+    margin-left: 8rem;
+  }
+  .container_photos_card:last-child {
+    margin-right: 8rem;
+  }
+  .container_photos_card_top {
+    margin-bottom: 0.5rem;
+  }
+  .container_photos_card_bottom a {
+    font-size: 0.9rem;
+    font-weight: 300;
+  }
+  .container_photos_card_bottom_rating span {
+    font-size: 0.8rem;
+  }
+}
+@media (max-width: 768px) {
+  .header {
+    display: none;
+  }
+  .banner {
+    flex-direction: column-reverse;
+  }
+  .banner_left, .banner_right {
+    width: 100%;
+  }
+  .banner_left {
+    margin: 3rem;
+  }
+  .banner2 {
+    flex-direction: column;
+  }
+  .banner2_content {
+    width: 100%;
+    margin: 4rem;
+  }
+  .banner2_content h1 {
+    font-size: 3rem;
+  }
+  .banner2_content h2 {
+    font-size: 1.5rem;
+    font-weight: 300;
+  }
+  .banner2_photo {
+    width: 100%;
+  }
+  .footer_top {
+    grid-template-columns: 1fr 1fr;
+    padding: 3rem 2rem;
+    align-self: center;
+  }
+  .footer_top_links {
+    justify-content: center;
+    margin: 0.5rem;
+  }
+  .footer_top_widget {
+    margin: 0.5rem;
+  }
+}
+@media (max-width: 575px) {
+  .header {
+    display: none;
+  }
+  .nav {
+    line-height: 1rem;
+  }
+  .nav_logo {
+    font-size: xx-small;
+  }
+  .nav_menu {
+    display: none;
+  }
+  .nav_icons {
+    padding: 1.5rem 1rem;
+  }
+  .nav_icons a:first-child {
+    display: flex;
+  }
+  .banner_left h1 {
+    color: #565656;
+  }
+  .banner_left h2 {
+    letter-spacing: 0;
+    padding: 0 2%;
+  }
+  .container_photos {
+    flex-direction: column;
+    margin: 0 0;
+  }
+  .container_photos_card:first-child {
+    margin-left: 0;
+  }
+  .container_photos_card:last-child {
+    margin-right: 0;
+  }
+  .banner2 {
+    flex-direction: column;
+  }
+  .footer {
+    align-self: start;
+  }
+  .footer_top {
+    grid-template-columns: 1fr;
+    align-self: start;
+    padding: 0;
+    margin: 0;
+  }
+  .footer_top_widget_appIcons {
+    margin: 1rem;
+  }
+  .footer_top_widget_appIcons_android, .footer_top_widget_appIcons_apple {
+    align-items: stretch;
+  }
 }
 /*# sourceMappingURL=main.css.map */
