--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,24 +1,27 @@
 $header-color: #fef7f6;
 
+// * {
+//   box-sizing: border-box;
+// }
+
 body {
   font-family: "Roboto", sans-serif;
   margin: 0 0;
 }
+
 .header {
   background-color: $header-color;
+  display: flex;
+  justify-content: space-between;
   font-size: small;
   font-weight: 300;
   padding: 0.15rem 5%;
-  display: flex;
-  justify-content: space-between;
-
   &-top-left {
     display: flex;
     gap: 2rem;
     margin-left: 5%;
   }
   &-top-right {
-    // border: 3px solid blue;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -26,7 +29,6 @@ body {
     margin-right: 5%;
   }
 }
-
 .nav {
   display: flex;
   justify-content: space-between;
@@ -59,7 +61,7 @@ body {
     }
     ul {
       display: inline;
-      margin: 0%;
+      margin: 0;
       padding: 0;
     }
     ul li {
@@ -72,7 +74,7 @@ body {
       position: absolute;
       width: 200px;
       display: none;
-      padding: 1% 0;
+      padding: 1.3% 0;
     }
     ul li ul li {
       display: block;
@@ -91,42 +93,15 @@ body {
     gap: 1em;
     padding: 2rem 2rem;
     font-size: 1.2rem;
-    // position: relative;
+    a:first-of-type {
+      display: none;
+    }
     a {
       position: relative;
       text-decoration: none;
       color: black;
     }
-    .ti-shopping-cart {
-      position: relative;
-      // .counter {
-      //   width: 10px;
-      //   height: 10px;
-      //   color: white;
-      //   background-color: #ff5353;
-      //   border-radius: 50%;
-      //   position: absolute;
-      //   bottom: 15px;
-      //   left: 14px;
-      //   text-align: center;
-      //   font-size: xx-small;
-      //   padding: 0.2rem;
-      // }
-      &::after {
-        content: "0";
-        width: 10px;
-        height: 10px;
-        color: white;
-        background-color: #ff5353;
-        border-radius: 50%;
-        position: absolute;
-        bottom: 15px;
-        left: 14px;
-        text-align: center;
-        font-size: xx-small;
-        padding: 0.2rem;
-      }
-    }
+    .ti-shopping-cart,
     .ti-heart {
       position: relative;
       .counter {
@@ -143,6 +118,7 @@ body {
         padding: 0.2rem;
       }
     }
+
     .ti-shopping-cart:hover,
     .ti-heart:hover {
       background-color: transparent;
@@ -152,24 +128,26 @@ body {
 }
 .banner {
   background-image: url(https://demo.themeies.com/silon/images/bg-1.jpg);
+  background-position: center;
+  width: 100%;
+  height: auto;
   display: flex;
   justify-content: center;
-  height: 60vh;
-
+  align-items: center;
+  margin: 0;
   &_left {
+    width: 50%;
+    height: auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
     flex-wrap: wrap;
-    padding: 0 2rem;
-    box-sizing: border-box;
     h1 {
       text-align: center;
-      font-size: small;
+      color: #565656;
+      font-size: 1rem;
       letter-spacing: 0.25rem;
-      font-weight: 300;
-      margin: 0;
+      font-weight: 500;
     }
     h2 {
       text-align: center;
@@ -179,11 +157,9 @@ body {
       margin-top: 0;
     }
     a {
-      box-sizing: border-box;
       background-color: #ff5353;
       text-decoration: none;
       color: white;
-      width: fit-content;
       padding: 1rem 3rem;
       align-self: center;
       transition: all 300ms ease-in-out;
@@ -194,59 +170,63 @@ body {
     }
   }
   &_right {
-    // display: flex;
+    width: 50%;
+    height: auto;
     img {
-      display: block;
+      // object-fit: contain;
       width: 100%;
       height: auto;
     }
   }
 }
 
-h1 {
+.title {
   text-align: center;
-  line-height: 7rem;
+  font-size: 1.5rem;
+  padding: 3rem 0;
 }
 .container_photos {
-  // border: 3px solid red;
   display: flex;
   justify-content: center;
   gap: 3rem;
-  margin-bottom: 2rem;
-  
+  margin-bottom: 4rem;
   &_card {
-    // border: 3px solid blue;
-    gap: 1;
-    display: block;
-    bottom: 0;
     position: relative;
+    // bottom: 50px;
     visibility: visible;
+    // width: 100%;
+    // height: auto;
+    &:first-of-type {
+      margin-left: 3rem;
+    }
+    &:nth-of-type(3) {
+      margin-right: 3rem;
+    }
     &:hover &_top_hoverLinks {
       visibility: visible;
-      // opacity: 1;
-      bottom: 100px;
+      bottom: 40%;
     }
-
     &_top {
-      // border: 3px solid green;
-      position: relative;
+      width: 100%;
+      height: auto;
       // margin-bottom: 1rem;
-      bottom: 0;
+      bottom: 50%;
+      img {
+        width: 100%;
+      }
       &_hoverLinks {
-        // border: 3px solid magenta;
         position: absolute;
         width: 100%;
         text-align: center;
         visibility: hidden;
-        bottom: 0;
-        transition: bottom 400ms ease;
+        bottom: 20%;
+        transition: bottom 300ms ease-in-out;
         a {
           text-decoration: none;
           color: black;
           border-radius: 50%;
           background-color: white;
           padding: 1rem;
-          // visibility: visible;
           &:hover {
             background-color: #ff5353;
             color: white;
@@ -255,7 +235,6 @@ h1 {
       }
     }
     &_bottom {
-      // border: 3px solid red;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -283,35 +262,34 @@ h1 {
         text-align: center;
       }
     }
-    // &:hover {
-    //   .container_photos_card_top_hoverLinks {
-    //     visibility: visible;
-    //   }
-    // }
   }
 }
 .banner2 {
   display: flex;
   justify-content: center;
   background-color: #e9e2d8;
-  gap: 3;
-
+  // gap: 3;
+  width: 100%;
+  height: auto;
+  align-items: center;
   &_content {
     display: flex;
     flex-direction: column;
     justify-content: center;
-
+    align-items: center;
+    width: 50%;
     h1 {
       font-family: "Dancing Script", cursive;
       font-size: 4rem;
+      margin: 0;
     }
-
     h2 {
       font-size: 2rem;
       font-weight: 100;
+      text-align: center;
     }
     a {
-      box-sizing: border-box;
+      // box-sizing: border-box;
       background-color: #ff5353;
       text-decoration: none;
       color: white;
@@ -325,34 +303,42 @@ h1 {
       color: #007bff;
     }
   }
-
   &_photo {
-    box-sizing: border-box;
+    // box-sizing: border-box;
+    height: auto;
+    width: 50%;
+    img {
+      object-fit: cover;
+      width: 100%;
+      height: auto;
+    }
   }
 }
 .footer {
-  // border: 3px solid red;
   background-color: #e9e2d8;
-  display: grid;
-  grid-template-rows: 5fr 1fr;
+  display: flex;
+  flex-direction: column;
+  // justify-items: flex-start;
   &_top {
-    // border-bottom: 1px solid #888;
-    display: flex;
-    justify-content: space-evenly;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    align-items: center;
+    margin: 0 1rem;
     &_links {
-      // border-bottom: 2px solid green;
       display: flex;
+      flex-direction: column;
       justify-content: center;
+      margin: 3rem 1rem;
       h5 {
-        // border: 3px solid red;
+        color: black;
         font-size: 1rem;
         font-weight: 500;
-        padding: 2rem 0;
       }
       a {
         text-decoration: none;
         color: #888;
         font-size: 0.9rem;
+        font-weight: 400;
         &:hover {
           color: #ff5353;
         }
@@ -362,35 +348,35 @@ h1 {
         list-style: none;
         margin: 0;
         padding: 0;
-        line-height: 2em;
+        line-height: 1.5rem;
         font-weight: 300;
-        // margin-top: 3rem;
       }
       li {
         text-align: left;
       }
       li:first-of-type {
-        margin-top: 1rem;
+        margin-top: 0.5rem;
+      }
+
+      ul li {
+        margin: 0.3rem 1rem;
       }
     }
     &_widget {
       display: flex;
       flex-direction: column;
-      margin-bottom: 3rem;
+      align-content: center;
       h6 {
         font-size: 1em;
         font-weight: 500;
       }
       hr:only-of-type {
-        margin-top: 2rem;
+        margin-top: 1rem;
       }
       &_appBtn {
-        // border: 3px solid red;
         display: flex;
-        justify-content: center;
         gap: 0.4rem;
         &_android {
-          // border: 3px solid green;
           display: flex;
           align-items: center;
           gap: 0.5rem;
@@ -426,7 +412,6 @@ h1 {
           }
         }
         &_apple {
-          // border: 3px solid blue;
           display: flex;
           align-items: center;
           gap: 0.5rem;
@@ -453,8 +438,8 @@ h1 {
         }
       }
       &_appIcons {
-        // border: 3px solid #888;
-        margin: 0;
+        // border-top: 1px solid #d6d8d9;
+        // margin-top: 2rem;
         a {
           text-decoration: none;
           color: black;
@@ -466,24 +451,188 @@ h1 {
         a:hover {
           background-color: #ff5353;
         }
-        // hr{
-        //   margin-top: 15%;
-        //   color: #d6d8d9;
-        // }
       }
     }
   }
   &_bottom {
     text-align: center;
     color: #888;
-    font-weight: 300;
+    font-weight: 400;
+    font-size: 0.9rem;
     hr {
-      width: 78vw;
+      width: 94%;
       text-align: center;
-      // box-sizing: border-box;
     }
     span {
       color: red;
+    }
+  }
+}
+
+@media (max-width: 991px) {
+  .header {
+    font-size: 60%;
+    gap: 0.5rem;
+  }
+  .nav {
+    &_logo {
+      font-size: xx-small;
+    }
+    &_menu {
+      display: none;
+    }
+    &_icons {
+      padding: 1.5rem 1rem;
+      a:first-child {
+        display: flex;
+      }
+    }
+  }
+  .banner {
+    &_left {
+      h1 {
+        font-size: 0.8rem;
+      }
+      h2 {
+        font-size: 2.5rem;
+      }
+    }
+  }
+  .container_photos {
+    gap: 1rem;
+    &_card {
+      &:first-child {
+        margin-left: 8rem;
+      }
+      &:last-child {
+        margin-right: 8rem;
+      }
+      &_top {
+        margin-bottom: 0.5rem;
+      }
+      &_bottom {
+        a {
+          font-size: 0.9rem;
+          font-weight: 300;
+        }
+        &_rating {
+          span {
+            font-size: 0.8rem;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .header {
+    display: none;
+  }
+  .banner {
+    flex-direction: column-reverse;
+    &_left,
+    &_right {
+      width: 100%;
+    }
+    &_left {
+      margin: 3rem;
+    }
+  }
+  .banner2 {
+    flex-direction: column;
+    &_content {
+      width: 100%;
+      margin: 4rem;
+      h1 {
+        font-size: 3rem;
+      }
+      h2 {
+        font-size: 1.5rem;
+        font-weight: 300;
+      }
+    }
+    &_photo {
+      width: 100%;
+    }
+  }
+  .footer {
+    &_top {
+      grid-template-columns: 1fr 1fr;
+      padding: 3rem 2rem;
+      align-self: center;
+      &_links {
+        justify-content: center;
+        margin: 0.5rem;
+      }
+      &_widget {
+        margin: 0.5rem;
+      }
+    }
+  }
+}
+
+@media (max-width: 575px) {
+  .header {
+    display: none;
+  }
+  .nav {
+    line-height: 1rem;
+    &_logo {
+      font-size: xx-small;
+    }
+    &_menu {
+      display: none;
+    }
+    &_icons {
+      padding: 1.5rem 1rem;
+      a:first-child {
+        display: flex;
+      }
+    }
+  }
+  .banner {
+    &_left {
+      h1 {
+        color: #565656;
+      }
+      h2 {
+        letter-spacing: 0;
+        padding: 0 2%;
+      }
+    }
+  }
+
+  .container_photos {
+    flex-direction: column;
+    margin: 0 0;
+    &_card {
+      &:first-child {
+        margin-left: 0;
+      }
+      &:last-child {
+        margin-right: 0;
+      }
+    }
+  }
+
+  .banner2 {
+    flex-direction: column;
+  }
+  .footer {
+    align-self: start;
+    &_top {
+      grid-template-columns: 1fr;
+      align-self: start;
+      padding: 0;
+      margin: 0;
+      &_widget_appIcons {
+        margin: 1rem;
+        &_android,
+        &_apple {
+          align-items: stretch;
+        }
+      }
     }
   }
 }
