--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,15 @@ body {
   margin: 0 0;
 }
 
+a {
+  text-decoration: none;
+  color: black;
+  transition: all 300ms ease-in-out;
+}
+a:hover {
+  color: #ff5353;
+}
+
 .header {
   background-color: #fef7f6;
   display: flex;
@@ -43,18 +52,10 @@ body {
   transition: all 300ms ease-in-out;
 }
 .nav_menu a {
-  text-decoration: none;
-  color: black;
   display: inline-block;
-  transition: all 300ms ease-in-out;
 }
 .nav_menu li a {
   padding: 1rem;
-  box-sizing: border-box;
-}
-.nav_menu li a:hover {
-  color: #ff5353;
-  transition: all 300ms ease-in-out;
 }
 .nav_menu ul {
   display: inline;
@@ -156,11 +157,9 @@ body {
 }
 .banner_left a {
   background-color: #ff5353;
-  text-decoration: none;
   color: white;
   padding: 1rem 3rem;
   align-self: center;
-  transition: all 300ms ease-in-out;
 }
 .banner_left a:hover {
   background-color: white;
@@ -238,12 +237,6 @@ body {
 .container_photos_card_bottom a {
   font-weight: 100;
   line-height: 2rem;
-  transition: all 300ms ease-in-out;
-  text-decoration: none;
-  color: black;
-}
-.container_photos_card_bottom a:hover {
-  color: #ff5353;
 }
 .container_photos_card_bottom p {
   font-size: 1.2rem;
@@ -283,14 +276,9 @@ body {
 }
 .banner2_content a {
   background-color: #ff5353;
-  text-decoration: none;
   color: white;
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
   padding: 1rem 3rem;
   align-self: center;
-  transition: all 300ms ease-in-out;
 }
 .banner2_content a:hover {
   background-color: white;
@@ -301,8 +289,6 @@ body {
   width: 50%;
 }
 .banner2_photo img {
-  -o-object-fit: cover;
-     object-fit: cover;
   width: 100%;
   height: auto;
 }
@@ -319,37 +305,30 @@ body {
   align-items: start;
   margin: 3rem 1rem;
 }
-.footer_top_links {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-.footer_top_links h5 {
+.footer_top h5 {
   color: black;
   font-size: 1rem;
   font-weight: 500;
 }
+.footer_top_links {
+  display: flex;
+  flex-direction: column;
+}
 .footer_top_links a {
-  text-decoration: none;
   color: #888;
-  font-size: 0.9rem;
-  font-weight: 400;
 }
 .footer_top_links a:hover {
   color: #ff5353;
 }
 .footer_top_links ul {
-  color: #888;
   list-style: none;
-  margin-top: 1rem;
+  margin: 0 0;
   padding-left: 0;
-  font-weight: 300;
+  font-size: 0.9rem;
+  font-weight: 400;
 }
 .footer_top_links li {
-  text-align: left;
-}
-.footer_top_links ul li {
-  margin: 0.8rem 1rem;
+  margin: 0.8rem 0rem;
 }
 .footer_top_widget {
   display: flex;
@@ -435,6 +414,7 @@ body {
 }
 .footer_top_widget_appIcons a:hover {
   background-color: #ff5353;
+  color: white;
 }
 .footer_bottom {
   text-align: center;
@@ -528,15 +508,10 @@ body {
   }
   .footer_top {
     grid-template-columns: 1fr 1fr;
-    padding: 3rem 2rem;
     align-self: center;
   }
   .footer_top_links {
     justify-content: center;
-    margin: 0.5rem;
-  }
-  .footer_top_widget {
-    margin: 0.5rem;
   }
   .footer_top_widget_appBtn {
     flex-direction: row;
@@ -585,18 +560,11 @@ body {
     align-self: start;
   }
   .footer_top {
-    width: 100%;
     grid-template-columns: 1fr;
     align-self: start;
-    padding: 0;
-    margin: 0;
   }
   .footer_top_widget_appIcons {
-    margin: 1rem;
-  }
-  .footer_top_widget_appIcons_android, .footer_top_widget_appIcons_apple {
-    width: 50%;
-    align-items: stretch;
+    margin-top: 1rem;
   }
 }
 /*# sourceMappingURL=main.css.map */
