--- a/css/main.css
+++ b/css/main.css
@@ -3,19 +3,20 @@ body {
   margin: 0 0;
 }
 
-a {
+.links {
   text-decoration: none;
   color: black;
   transition: all 300ms ease-in-out;
 }
-a:hover {
+.links:hover {
   color: #ff5353;
 }
 
 .header {
-  background-color: #fef7f6;
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
+  background-color: #fef7f6;
   font-size: small;
   font-weight: 300;
   padding: 0.15rem 5%;
@@ -27,6 +28,7 @@ a:hover {
 }
 .header-top-right {
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
   align-items: center;
   gap: 2em;
@@ -35,6 +37,7 @@ a:hover {
 
 .nav {
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
   margin: 0 9%;
   font-size: small;
@@ -44,12 +47,11 @@ a:hover {
 }
 .nav_menu {
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
   align-items: center;
   gap: 3rem;
-  color: black;
   font-weight: 500;
-  transition: all 300ms ease-in-out;
 }
 .nav_menu a {
   display: inline-block;
@@ -80,24 +82,20 @@ a:hover {
 .nav_menu ul li ul li a {
   display: block;
   background-color: white;
-  transition: background-color 300ms;
 }
 .nav_menu ul li ul li a:hover {
   background-color: #f5f5f5;
 }
 .nav_icons {
   display: flex;
+  flex-direction: row;
+  justify-content: space-between;
   gap: 1em;
   padding: 2rem 2rem;
   font-size: 1.2rem;
 }
 .nav_icons a:first-of-type {
   display: none;
-}
-.nav_icons a {
-  position: relative;
-  text-decoration: none;
-  color: black;
 }
 .nav_icons .ti-shopping-cart,
 .nav_icons .ti-heart {
@@ -125,22 +123,22 @@ a:hover {
 }
 
 .banner {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
   background-image: url(https://demo.themeies.com/silon/images/bg-1.jpg);
   background-position: center;
   width: 100%;
   height: auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 0;
 }
 .banner_left {
-  width: 50%;
-  height: auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
   flex-wrap: wrap;
+  width: 50%;
+  height: auto;
 }
 .banner_left h1 {
   text-align: center;
@@ -183,6 +181,7 @@ a:hover {
 
 .container_photos {
   display: flex;
+  flex-direction: row;
   justify-content: center;
   gap: 3rem;
   margin-bottom: 4rem;
@@ -199,12 +198,12 @@ a:hover {
 }
 .container_photos_card:hover .container_photos_card_top_hoverLinks {
   visibility: visible;
-  bottom: 40%;
+  bottom: 12rem;
 }
 .container_photos_card_top {
   width: 100%;
   height: auto;
-  bottom: 50%;
+  bottom: 20rem;
 }
 .container_photos_card_top img {
   width: 100%;
@@ -214,12 +213,10 @@ a:hover {
   width: 100%;
   text-align: center;
   visibility: hidden;
-  bottom: 20%;
+  bottom: 0rem;
   transition: bottom 300ms ease-in-out;
 }
 .container_photos_card_top_hoverLinks a {
-  text-decoration: none;
-  color: black;
   border-radius: 50%;
   background-color: white;
   padding: 1rem;
@@ -231,6 +228,7 @@ a:hover {
 .container_photos_card_bottom {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
   line-height: 1.5rem;
   font-size: 1rem;
@@ -245,13 +243,13 @@ a:hover {
   margin-top: 0.5rem;
 }
 .container_photos_card_bottom_rating {
-  box-sizing: border-box;
   color: red;
   text-align: center;
 }
 
 .banner2 {
   display: flex;
+  flex-direction: row;
   justify-content: center;
   background-color: #e9e2d8;
   width: 100%;
@@ -295,9 +293,10 @@ a:hover {
 }
 
 .footer {
-  background-color: #e9e2d8;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  background-color: #e9e2d8;
   align-items: center;
 }
 .footer_top {
@@ -314,6 +313,7 @@ a:hover {
 .footer_top_links {
   display: flex;
   flex-direction: column;
+  justify-content: center;
 }
 .footer_top_links a {
   color: #888;
@@ -332,8 +332,6 @@ a:hover {
   margin: 0.8rem 0rem;
 }
 .footer_top_widget {
-  display: flex;
-  flex-direction: column;
   align-content: center;
 }
 .footer_top_widget h6 {
@@ -345,10 +343,14 @@ a:hover {
 }
 .footer_top_widget_appBtn {
   display: flex;
+  flex-direction: row;
+  justify-content: center;
   gap: 0.4rem;
 }
 .footer_top_widget_appBtn_android {
   display: flex;
+  flex-direction: row;
+  justify-content: center;
   align-items: center;
   gap: 0.5rem;
   padding: 0 0.8rem;
@@ -383,9 +385,12 @@ a:hover {
 }
 .footer_top_widget_appBtn_apple {
   display: flex;
+  flex-direction: row;
+  justify-content: center;
   align-items: center;
   gap: 0.5rem;
-  padding: 0rem 0.8rem;
+  padding: 0 0.8rem;
+  margin: 0 0.1rem;
   border-radius: 5px;
   background-color: #ff5353;
   color: white;
@@ -406,12 +411,9 @@ a:hover {
   margin-top: 0;
 }
 .footer_top_widget_appIcons a {
-  text-decoration: none;
-  color: black;
   background-color: white;
   padding: 0.5rem;
   margin: 0 0.25rem;
-  transition: background-color 300ms;
 }
 .footer_top_widget_appIcons a:hover {
   background-color: #ff5353;
@@ -536,9 +538,6 @@ a:hover {
   }
   .nav_icons a:first-child {
     display: flex;
-  }
-  .banner_left h1 {
-    color: #565656;
   }
   .banner_left h2 {
     letter-spacing: 0;
